--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 *.properties
+/src/main/resources/META-INF/persistence.xml
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
